Доверстать главную страницу

--- a/source/form.html
+++ b/source/form.html
@@ -35,7 +35,7 @@
             </li>
           </ul>
         </nav>
-        <div class="authorization authorization--desktop-hidden">
+        <div class="authorization">
           <a class="button authorization__button link-reset">Авторизация</a>
         </div>
         <ul class="contact-list list-reset">
