--- a/source/catalog.html
+++ b/source/catalog.html
@@ -38,7 +38,7 @@
             </li>
           </ul>
         </nav>
-        <div class="authorization authorization--desktop-hidden">
+        <div class="authorization">
           <a class="button authorization__button link-reset">Авторизация</a>
         </div>
         <ul class="contact-list list-reset">
