Добавил попап тарифы для бизнеса

--- a/source/index.html
+++ b/source/index.html
@@ -460,19 +460,19 @@
         <ul class="business-rates__list list-reset">
           <li class="business-rates__item">
             Реклама у блоггера<br>
-            300 000 руб./пост
+            <span class="business-rates__price">300 000 руб./пост</span>
           </li>
           <li class="business-rates__item">
             Накрутка подписчиков<br>
-            от 1 руб./шт.
+            <span class="business-rates__price">от 1 руб./шт.</span>
           </li>
           <li class="business-rates__item">
             Лайки от ботов<br>
-            от 20 коп./лайк
+            <span class="business-rates__price">от 20 коп./лайк</span>
           </li>
           <li class="business-rates__item">
             Ваш продакт-плейсмент<br>
-            Индивидуально
+            <span class="business-rates__price">Индивидуально</span>
           </li>
         </ul>
         <button class="business-rates__button button-reset" type="button">
