Внес правки для десктопной версии

--- a/source/index.html
+++ b/source/index.html
@@ -44,7 +44,7 @@
         </nav>
         <ul class="contact-list contact-list--menu-open list-reset">
           <li class="contact-list__item contact-list__item--menu-open">
-            <a class="contact-list__link contact-list__link--menu contact-list__link--phone contact-list__link--blue-bg-phone link-reset"
+            <a class="contact-list__link contact-list__link--menu contact-list__link--header-phone contact-list__link--phone contact-list__link--blue-bg-phone link-reset"
               href="tel:88005558628">
               <img class="contact-list__image contact-list__image--menu" src="img/icon_call.svg" alt="Позвонить"
                 width="16" height="16">
@@ -59,7 +59,7 @@
             </a>
           </li>
           <li class="contact-list__item contact-list__item--menu-open">
-            <a class="contact-list__link contact-list__link--menu contact-list__link--mail contact-list__link--blue-bg-mail link-reset"
+            <a class="contact-list__link contact-list__link--menu contact-list__link--header-mail contact-list__link--mail contact-list__link--blue-bg-mail link-reset"
               href="mailto:mail@htmlacademy.ru">
               <img class="contact-list__image contact-list__image--menu" src="img/icon_mail.svg" alt="Телефон">
               <span class="contact-list__icon-container contact-list__icon-container--menu">
@@ -261,9 +261,9 @@
                   opacity=".1" />
               </svg>
               5326</span>
-            <p class="directions__text">
-              Закоулки <br class="hide-on-mobile hide-on-desctops">старой <br
-                class="hide-on-tablets hode-on-desktops">Европы
+            <p class="directions__text directions__text--czech">
+              Закоулки <br class="hide-on-mobile hide-on-desktops">старой <br
+                class="hide-on-tablets hide-on-desktops">Европы
             </p>
           </div>
         </li>
