--- a/source/index.html
+++ b/source/index.html
@@ -59,7 +59,7 @@
             </a>
           </li>
           <li class="contact-list__item contact-list__item--menu-open">
-            <a class="contact-list__link contact-list__link--menu contact-list__link--header-mail contact-list__link--mail contact-list__link--blue-bg-mail link-reset"
+            <a class="contact-list__link contact-list__link--menu contact-list__link--header-mail contact-list__link--mail link-reset"
               href="mailto:mail@htmlacademy.ru">
               <img class="contact-list__image contact-list__image--menu" src="img/icon_mail.svg" alt="Телефон">
               <span class="contact-list__icon-container contact-list__icon-container--menu">
